--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # this lets us work in the actual repository 
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
       # if the folder named "tokens" does not exist, create it
       - name: mkdir "tokens" directory
         # change tokens here (and in line 32) if you want to use a differently named folder 
@@ -21,7 +21,7 @@ jobs:
       # this creates a json file from the stringified json from the request body
       - name: create json from request body
         id: create-json
-        uses: jsdaniell/create-json@1.1.2
+        uses: actions/checkout@main
         with:
           # it uses the name from your settings that was send as then tokenFileName parameter
           name: 'design-tokens-example.json'
@@ -29,3 +29,9 @@ jobs:
           json: ${{ github.event.client_payload.tokens }}
           # it uses the directory named "tokens" to store this json file (change this if you changed it above to use a different folder)
           dir: 'tokens'
+      - name: Commit
+        run: |
+          # Stage the file, commit and push
+          git add .
+          git commit -m "Added framework"
+          git push
