--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,6 @@ jobs:
           json: ${{ github.event.client_payload.tokens }}
           # it uses the directory named "tokens" to store this json file (change this if you changed it above to use a different folder)
           dir: 'tokens'
-      - name: Commit
-        run: |
-          # Stage the file, commit and push
-          git config user.name "Aishwaryalaxmi"
-          git config user.email "aishurao199@gmail.com"
-          git add .
-          git commit -m "Added framework"
-          git push
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Update Tokens
